css for signup page completed

--- a/chatter/public/index.html
+++ b/chatter/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="./images/toppng.com-online-chat-png-512x512.png" />
+    <link rel="icon" href="./images/PngItem_1489584.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
